# abd

./: .gitignore  Cargo.toml  LICENSE  README.md
abd_kit/: Cargo.toml
abd_kit/src/: collision_detection.rs  lib.rs  moments.rs
abd_kit/src/collision_detection/: closest_point.rs  collider.rs  distance_squared.rs  smallest_offset.rs  triangle_face.rs
abd_kit/src/collision_detection/collider/: triangle_mesh.rs
abd_kit/src/spatial/: hash_grid.rs  octree.rs  sweep_prune.rs  tests.rs
bevy_abd/: Cargo.toml
bevy_abd/examples/: basic.rs
doc/: accd.ipynb  accd_coplanar.wls  accd_line_line_closest.wls  accd_pt_tri.wls  accd_seg_seg.wls  line_line_intersection.txt  line_line_intersection_formatted.txt  tri_point_intersection.txt  tri_pt.ipynb  tri_pt.wxmx
doc/.ipynb_checkpoints/: tri_pt-checkpoint.ipynb
src/: collision_detection.rs  configuration.rs  kinematics.rs  lib.rs  moments.rs  spatial.rs  util.rs
src/collision_detection/: accd.rs  closest_point.rs  collider.rs  distance_squared.rs  intersecting.rs  segment.rs  smallest_offset.rs  tests.rs  triangle_face.rs  vertex.rs
src/spatial/: hierarchical_hash_grid.rs
src/util/: id_ref.rs
