[package]
name = "bevy_abd"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[example]]
name = "basic"
edition = "2021"

[dependencies]
abd_kit = { path = "../abd_kit" }
bevy_app = "0.13"

[dev-dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
